force-app/main/default/objects/EncryptedDataGDPR__c/EncryptedDataGDPR__c.object-meta.xml
<CustomObject>
    <description>Object used to encrypt data for the GDPR</description>
    <label>Encrypted Data GDPR</label>
    <nameField>
        <displayFormat>Encrypted Data-{00000}</displayFormat>
        <label>Encrypted Data GDPR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encrypted Datas GDPR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>