force-app/main/default/objects/EncryptedDataGDPR__c/fields/BusinessPhoneEncrypted__c.field-meta.xml
<CustomField>
    <fullName>BusinessPhoneEncrypted__c</fullName>
    <description>Business phone from lead or Contact encrypted</description>
    <label>Business Phone Encrypted</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>