force-app/main/default/objects/EncryptedDataGDPR__c/fields/EmailEncrypted__c.field-meta.xml
<CustomField>
    <fullName>EmailEncrypted__c</fullName>
    <description>Email from lead or Contact encrypted</description>
    <label>Email Encrypted</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>