force-app/main/default/objects/EncryptedDataGDPR__c/fields/MobilePhoneEncrypted__c.field-meta.xml
<CustomField>
    <fullName>MobilePhoneEncrypted__c</fullName>
    <description>Mobile phone from lead or Contact encrypted</description>
    <label>Mobile Phone Encrypted</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>